# r-part

./: Cargo.toml  LICENSE  README.md  flake.nix  index.html  main.js  serve.sh  shell.nix  todo.md
src/: draw.rs  emitter.rs  lib.rs  particle.rs  vector.rs  webgl.rs
static/: style.css
