[package]
name = "rust-particles"
version = "0.1.0"
authors = ["craigdallimore <decoy9697@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# Produce a dynamic system library (e.g. for linux, or macos...)
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"

[dependencies.web-sys]
version = "0.3.59"
features = [
  #'CanvasRenderingContext2d',
  #'Document',
  #'Element',
  #'HtmlElement',
  #'HtmlCanvasElement',
  #'Node',
  #'Window',
  'console',
]
