[package]
name = "rust-particles"
version = "0.1.0"
authors = ["craigdallimore <decoy9697@gmail.com>"]
edition = "2021"
description = "Learning about rust, wasm and graphics"
repository = "https://github.com/craigdallimore/r-part"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# Produce a dynamic system library (e.g. for linux, or macos...)
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.152", features = ["derive"] }                              # A generic serialization/deserialization framework
serde_json = "1.0.91"                          # A JSON serialization file format

[dependencies.web-sys]
version = "0.3.59"
features = [
  #'CanvasRenderingContext2d',
  'Document',
  #'Element',
  'HtmlElement',
  #'HtmlCanvasElement',
  #'Node',
  'Window',
  'console',
]
